# libutil

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  Makefile.am  README  TODO  configure.ac
ci/: install  test
include/util/: at45.h  buffer.h  log.h  pid.h
portable/: macros.h  smath.h  stdbool.h  system.h
src/: assert.c  assert.h  at45.c  at45_ops.h  at45db021e.h  at45db041e.h  at45db081e.h  at45db161e.h  at45db641e.h  at45dq161.h  at45dq321.h  buffer.c  libutil.pc.in  libutil.sym  log.c  log.h  pid.c  str.c  str.h  util-private.h  xmalloc.c  xmalloc.h  xwrite.c  xwrite.h
test/: .gitignore  TESTS  dbuf-t.c  log-t.c  pid-t.c
test/tap/: basic.c  basic.h  process.c  process.h  string.c  string.h
